fixed film title alignment

--- a/lately.css
+++ b/lately.css
@@ -101,7 +101,7 @@ h2 {
   }
   h2.film-title {
     font-size: 9rem;
-    top: 123px;
+    top: 294px;
   }
   .carousel-inner img {
     width: 180%;
